# NLPpaper

./: README.md  config.yaml  pyproject.toml  requirements.txt
chroma_db/e2245d1d-7ce6-4141-98bb-b65571032d5c/: index_metadata.pickle
src/: benchmark.py  data_ingestion.py  evaluation.py
src/models/: baseline.py  fine_tune.py  rag.py
